Rough algorithm outline

--- a/GylCo.html
+++ b/GylCo.html
@@ -22,6 +22,24 @@
 
             <form action="/search" class="well form-search" style="font-family:'Roboto', sans-serif;">
 
+                <select required autofocus>
+                    <option value="food">Food</option>
+                    <option value="shelter">Shelter</option>
+                    <option value="household_operation">Household operation</option>
+                    <option value="household_furnishings_and_equipment">Household furnishings and equipment</option>
+                    <option value="clothing">Clothing</option>
+                    <option value="transportation">Transportation</option>
+                    <option value="health_care">Health Care</option>
+                    <option value="personal_care">Personal care</option>
+                    <option value="recreation">Recreation</option>
+                    <option value="reading">Reading materials and other printed matter</option>
+                    <option value="education">Education</option>
+                    <option value="tobacco">Tobacco products and alcoholic beverages</option>
+                    <option value="gambling">Gambling</option>
+                </select>
+                <br>
+                <br>
+
                 <input name="location" type="text" class="span4 search-query" placeholder="City..." />
                 <br>
                 <br>
