--- a/GylCo.html
+++ b/GylCo.html
@@ -4,6 +4,7 @@
     </title>
     <script src="inject.js"></script>
     <script src="/js/console.js"></script>
+    <script src="/js/alg.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
 
             <form action="/search" class="well form-search" style="font-family:'Roboto', sans-serif;">
 
-                <select required autofocus>
+                <select name="industry" required autofocus>
                     <option value="food">Food</option>
                     <option value="shelter">Shelter</option>
                     <option value="household_operation">Household operation</option>
