--- a/GylCo.html
+++ b/GylCo.html
@@ -41,6 +41,10 @@
                 <br>
                 <br>
 
+                <select name="age" required autofocus>
+                    <option value=""></option>
+                </select>
+
                 <input name="location" type="text" class="span4 search-query" placeholder="City..." />
                 <br>
                 <br>
